No react plugin in the standard file

--- a/config/.eslintrc.json
+++ b/config/.eslintrc.json
@@ -27,14 +27,10 @@
     "no-var": 1,
     "space-before-function-paren": [1, "always"],
     "strict": [1, "global"],
-    "no-console": 1,
-    "react/jsx-uses-react": 1
+    "no-console": 1
   },
   "globals": {
     "fetch": true,
     "requireText": true
-  },
-  "plugins": [
-    "react"
-  ]
+  }
 }
