--- a/config/.editorconfig
+++ b/config/.editorconfig
@@ -8,3 +8,8 @@ charset = utf-8
 [**{.js,.scss,.html,.mustache}]
 indent_style = tab
 trim_trailing_whitespace = true
+
+[**{.json}]
+indent_style = space
+indent_size = 2
+trim_trailing_whitespace = true
