--- a/config/.editorconfig
+++ b/config/.editorconfig
@@ -5,7 +5,7 @@ end_of_line = lf
 insert_final_newline = true
 charset = utf-8
 
-[**{.js,.scss,.html,.mustache}]
+[**{.js,.scss,.html,.mustache,Makefile}]
 indent_style = tab
 trim_trailing_whitespace = true
 
